<resources>
    <string name="app_name">VCar</string>
    <string name="text_demo">Text demo</string>
    <string name="vanban_demo">Đây là một đoạn văn bản rất hay ho và có nhiều điều thú vị do thinhdev viết ra để test mức độ hiển thị activity</string>
    <string name="vanbandai_demo">Đây là một đoạn văn bản rất dài, rất rất dài, hay ho và có nhiều điều thú vị do thinhdev viết ra để test xem mức độ hiển thị nội dung trong activity có trơn tru và mượt mà như ý định. nếu không trơn chu thì cố mà sửa lại cho đúng nhé</string>

    <!--app-->
    <string name="back_app">Nhấn 2 lần liên tiếp để thoát</string>
    <string name="loading">Đang xử lý, vui lòng chờ!</string>

<!--    home-->
    <string name="home_title">Bạn muốn đi đâu ?</string>
    <string name="home_hint_start">Chọn điểm khởi hành</string>
    <string name="home_hint_stop">Chọn điểm dừng</string>


<!--    ticket-->
    <string name="ticket_title">Vé của tôi</string>

<!--    promotion-->
    <string name="promotion_title">Khuyến mại</string>

<!--    account-->

    <string name="account_title">Tài khoản của tôi</string>

    <!--    navi menu-->
    <string name="menu_home">Trang chủ</string>
    <string name="menu_ticket">Vé của tôi</string>
    <string name="menu_promotion">Khuyến mại</string>
    <string name="menu_account">Tài khoản</string>

    <!--intentValue-->
    <integer name="request_check">862</integer>
    <integer name="result_check">876</integer>

    <integer name="request_logout">632</integer>
    <integer name="result_logout">236</integer>

    <integer name="request_login">122</integer>
    <integer name="result_login">221</integer>
    <integer name="result_login_finish">532</integer>

    <integer name="request_registration">123</integer>
    <integer name="result_registration">321</integer>

    <integer name="request_forgotpassword">439</integer>
    <integer name="result_forgotpassword">934</integer>

    <!--message-->
    <string name="message_success">Thành Công</string>
    <string name="message_error">Có lỗi xảy ra. thử lại sau</string>
    <string name="message_fill_info">Hãy điền đầy đủ thông tin</string>
    <string name="message_email_invalid">Thư điện tử không hợp lệ</string>
    <string name="message_password_invalid">Mật khẩu phải dài hơn 6 ký tự</string>
    <string name="message_password_repeat_invalid">Xác nhận mật khẩu không khớp</string>


<!--    server-->
    <string name="ipServer">108.160.129.143</string>
    <string name="host">http://108.160.129.143:4000/</string>
    <string name="host_api">http://108.160.129.143:4000/api/</string>

<!--    <string name="ipServer">192.168.1.3</string>-->
<!--    <string name="host">http://192.168.1.3:4000/</string>-->
<!--    <string name="host_api">http://192.168.1.3:4000/api/</string>-->

    <string name="token_api">ABC</string>
    <integer name="timeout_server">10000</integer>

    <!--Dialog-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_got_it">Đã hiểu</string>
    <string name="dialog_back">Trở lại</string>
    <string name="dialog_next">Tiếp Tục</string>
    <string name="dialog_complete">Hoàn tất</string>

    <!--Login-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">Tự hào ứng dụng Việt</string>
    <string name="login_hint_username">Thư điện tử hoặc số điện thoại</string>
    <string name="login_hint_password">Mật khẩu</string>
    <string name="login_login">Đăng Nhập</string>
    <string name="login_registration">Đăng ký</string>
    <string name="login_forgot_pass_word">Quên mật khẩu</string>

    <!--Registration-->
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration_title">Tính mạng con người là trên hết</string>
    <string name="registration_hint_email">Thư điện tử</string>
    <string name="registration_hint_number_phone">Số điện thoại</string>
    <string name="registration_hint_password">Mật khẩu</string>
    <string name="registration_hint_password_repeat">Nhập lại mật khẩu</string>
    <string name="registration_registration">Đăng ký</string>
    <string name="registration_back_login">Về đăng nhập</string>

    <!--verify-->
    <string name="verify_content">Mã xác thực đã được gửi về hòm thư của bạn. Kiểm tra và nhập mã để xác thực tài khoản</string>
    <string name="verify_ok">Xác thực</string>
    <string name="verify_again">Gửi lại</string>
    <string name="verify_message_invalid">Mã xác thực không khớp, kiểm tra lại</string>
    <string name="verify_message_time">Thời gian còn lại: </string>
    <string name="verify_message_timeout">Hết thời gian hiệu lực</string>

    <!--ForgotPassword-->
    <string name="title_activity_forgotpassword">ForgotPasswordActivity</string>
    <string name="forgotpassword_title">An toàn thông tin cá nhân</string>
    <string name="forgotpassword_hint_username">Thư điện tử hoặc số điện thoại</string>
    <string name="forgotpassword_support">Khi bấm xác nhận, hệ thống sẽ gửi mật khẩu mới về hòm thư của bạn.</string>
    <string name="forgotpassword_forgotpassword">Xác Nhận</string>
    <string name="forgotpassword_back_login">Về đăng nhập</string>
    <string name="forgotpassword_message_success">Kiểm tra mật khẩu trong hòm thư, và đăng nhập lại</string>


<!--    CheckActivity-->
    <string name="check_error_network">Kết nối mạng thất bại</string>
    <string name="check_error_mac">Lấy thông tin địa chỉ MAC thất bại</string>
    <string name="check_error_server">Kết nối server thất bại</string>
    <string name="check_error_readFile">Đọc tệp tin hệ thống thất bại</string>
    <string name="check_error_wrileFile" >Ghi tệp tin hệ thống thất bại</string>

<!--    InfoCarDiaLog-->
    <string name="info_car_title">Thông Tin Xe</string>
    <string name="dialog_info_car_error_show">Chưa đủ thông tin hiển thị</string>
    <string name="info_car_pointStop">Điểm dừng</string>
    <string name="info_car_fare">Giá vé</string>
    <string name="info_car_route">Tuyến đường</string>
    <string name="info_car_type">Loại xe</string>
    <string name="info_car_controlSea">Biển kiểm soát</string>
    <string name="info_car_numberSeat">Số ghế</string>

    <!--    BookTicketDialog-->
    <string name="book_ticket_title">Đặt Vé Xe</string>
    <string name="book_ticket_date">Ngày khởi hành</string>
    <string name="book_ticket_hours">Giờ xuất phát</string>
    <string name="book_ticket_sum_money">Tổng tiền</string>
    <string name="book_ticket_seat_diagram">Sơ đồ</string>
    <string name="book_ticket_seat_emply">Còn trống</string>
    <string name="book_ticket_seat_selected">Đã chọn</string>
    <string name="book_ticket_seat_selecting">Đang chọn</string>
    <string name="dialog_book_ticket_error_trip">Không có thông tin hiển thị chuyến đi. Thử lại sau</string>
    <string name="book_ticket_message_error_trip">Bạn chưa chọn chuyến đi, Kiểm tra lại thời gian khởi hành</string>
    <string name="book_ticket_message_error_seat">Hãy chọn ít nhất một ghế</string>

    <!--    PaymentDialog-->
    <string name="payment_title">Thanh Toán</string>
    <string name="payment_code_promotion">Mã giảm giá</string>
    <string name="payment_hint_code_promotion">VD: VC43</string>
    <string name="payment_money">Giá tiền</string>
    <string name="payment_discount">Giảm giá</string>
    <string name="payment_totalMoney">Tổng tiền</string>
    <string name="payment_case">Tiền mặt</string>
    <string name="payment_visa_card">Visa card</string>
    <string name="payment_message_error_ticket">Không có vé nào để thanh toán, thử lại sau</string>


    <!--    Promotion-->
    <string name="dialog_detail_promotion">Chi tiết khuyến mại</string>
    <string name="dialog_detail_note">Chương trình này có thể kết thúc sớm hơn dự kiến nếu đạt ngưỡng giới hạn ngân sách hoặc hết số lượng phân phối</string>

<!--    Ticket Paid-->
    <string name="ticket_paid_note">Di chuyển tới thiết bị quyét mã vạch hoặc nhấn OK để mô phỏng việc sử dụng vé</string>


    <!--    Ticket vote-->
    <string name="ticket_vote_note">Nếu có bất kỳ khiếu nại gì, xin hãy để lại ý kiến</string>

    <!--    Account Info-->
    <string name="account_info_title">Thông tin cá nhân</string>
    <string name="account_name">Họ tên</string>
    <string name="account_name_hint">VD: Nguyễn Thị Hòa</string>
    <string name="account_gender">Giới tính</string>
    <string name="account_number">Số điện thoại</string>
    <string name="account_number_hint">VD: 0123456789</string>
    <string name="account_email">Thư điện tử</string>
    <string name="account_email_hint">VD: nguyenthihoa@vcar.com</string>

    <!--    Account Change Pass-->
    <string name="account_changepasss_title">Đổi mật khẩu</string>
    <string name="account_old_pass">Mật khẫu cũ</string>
    <string name="account_new_pass">Mật khẩu mới</string>
    <string name="account_repeat_pass">Nhập lại mật mật khẩu mới</string>



</resources>
